# mars

./: .ghci  .gitignore  .travis.yml  LICENSE  Main.hs  Mars.cabal  README  README.md  login.ms  test.ms
.circleci/: config.yml
Client/: Main.hs
Mars/: Command.hs  CommandParser.hs  Eval.hs  Instances.hs  Parser.hs  Types.hs
Tests/Mars/: Arbitraries.hs  Main.hs
script/: dev  test  update
src/Client/: Main.hs
src/Mars/: Command.hs  Eval.hs  Instances.hs  Parser.hs  Query.hs  Renderable.hs  Types.hs
src/Mars/Command/: Cat.hs  Cd.hs  Load.hs  Ls.hs  Pwd.hs  Save.hs  Set.hs
src/Tests/Mars/: Arbitraries.hs  Main.hs
