name:                Mars
version:             0.1.0.0

synopsis:            A repl for interacting with REST data sources

description: mars is a command line utility for interacting with web based data
    sources. It allows you to explore remote data sources using commands that are
    similar to a login shell

homepage:            https://github.com/lorcanmcdonald/mars


license:             BSD3

license-file:        LICENSE

author:              Lorcan McDonald

maintainer:          lorcan@lorcanmcdonald.com

-- copyright:
category:            Web
build-type:          Simple

cabal-version:       >=1.10

library
  hs-source-dirs: src/
  exposed-modules:
      Mars.Command
      Mars.Parser
      Mars.Eval
      Mars.Types
      Mars.Instances
      Tests.Mars.Arbitraries
  build-depends: QuickCheck
             , lens
             , aeson
             , aeson-pretty
             , attoparsec
             , base >=3 && < 6
             , bytestring
             , parsec
             , string-conv
             , text == 1.*
             , transformers
             , unordered-containers
             , url
             , vector
  ghc-options: -O2 -threaded -Wall -Werror

executable mars
  Hs-Source-Dirs: src/Client
  main-is: Main.hs
  build-depends: Mars
                 , base >=3 && < 6
                 , bytestring
                 , optparse-applicative
                 , attoparsec
                 , haskeline
                 , text
                 , aeson
  ghc-options: -O2 -rtsopts=all -with-rtsopts=-N -Wall -threaded -Werror
  if os(windows)
    Cpp-options: -DWINDOWS

  default-language:    Haskell2010

Test-suite test-mars
    Hs-Source-Dirs:
      src/Tests/Mars
      src
    type: exitcode-stdio-1.0
    Main-is: Main.hs
    other-modules:
      Mars.Command
      Mars.Eval
      Mars.Instances
      Mars.Parser
      Mars.Types
      Tests.Mars.Arbitraries
    autogen-modules:
      Mars.Command
      Mars.Eval
      Mars.Instances
      Mars.Parser
      Mars.Types
      Tests.Mars.Arbitraries

    ghc-options: -O2 -rtsopts=all -with-rtsopts=-N -Wall -threaded -Werror
    Build-depends: QuickCheck
                  , Mars
                  , aeson
                  , aeson-pretty
                  , attoparsec
                  , base
                  , bytestring
                  , lens
                  , parsec
                  , string-conv
                  , tasty >= 0.10.1
                  , tasty-hunit
                  , tasty-quickcheck
                  , text
                  , unordered-containers
                  , url
                  , vector

source-repository head
    type: git
    location: https://github.com/lorcanmcdonald/mars.git
